# gibMacOS_GUI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_gui.py
src/: downloader.py  main.py
src/backend/: __init__.py  exceptions.py  gibmacos_backend.py  internet_recovery.py
src/gui/: __init__.py  dialogs.py  gibmacos_gui.py  internet_recovery_dialog.py
src/utils/: __init__.py  file_verification.py  helpers.py
